edit swagger config, regenerate swagger
