# restapi/operations/patch_cards_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"card-project/models"
+)
+
+// PatchCardsCreatedCode is the HTTP code returned for type PatchCardsCreated
+const PatchCardsCreatedCode int = 201
+
+/*
+PatchCardsCreated Card patched
+
+swagger:response patchCardsCreated
+*/
+type PatchCardsCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Card `json:"body,omitempty"`
+}
+
+// NewPatchCardsCreated creates PatchCardsCreated with default headers values
+func NewPatchCardsCreated() *PatchCardsCreated {
+
+	return &PatchCardsCreated{}
+}
+
+// WithPayload adds the payload to the patch cards created response
+func (o *PatchCardsCreated) WithPayload(payload *models.Card) *PatchCardsCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the patch cards created response
+func (o *PatchCardsCreated) SetPayload(payload *models.Card) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PatchCardsCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+PatchCardsDefault Общая ошибка
+
+swagger:response patchCardsDefault
+*/
+type PatchCardsDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewPatchCardsDefault creates PatchCardsDefault with default headers values
+func NewPatchCardsDefault(code int) *PatchCardsDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PatchCardsDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the patch cards default response
+func (o *PatchCardsDefault) WithStatusCode(code int) *PatchCardsDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the patch cards default response
+func (o *PatchCardsDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the patch cards default response
+func (o *PatchCardsDefault) WithPayload(payload *models.ErrorResponse) *PatchCardsDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the patch cards default response
+func (o *PatchCardsDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PatchCardsDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
