# restapi/operations/post_banks_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"card-project/models"
+)
+
+// PostBanksCreatedCode is the HTTP code returned for type PostBanksCreated
+const PostBanksCreatedCode int = 201
+
+/*
+PostBanksCreated Bank created
+
+swagger:response postBanksCreated
+*/
+type PostBanksCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Bank `json:"body,omitempty"`
+}
+
+// NewPostBanksCreated creates PostBanksCreated with default headers values
+func NewPostBanksCreated() *PostBanksCreated {
+
+	return &PostBanksCreated{}
+}
+
+// WithPayload adds the payload to the post banks created response
+func (o *PostBanksCreated) WithPayload(payload *models.Bank) *PostBanksCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post banks created response
+func (o *PostBanksCreated) SetPayload(payload *models.Bank) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostBanksCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+PostBanksDefault Общая ошибка
+
+swagger:response postBanksDefault
+*/
+type PostBanksDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewPostBanksDefault creates PostBanksDefault with default headers values
+func NewPostBanksDefault(code int) *PostBanksDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostBanksDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post banks default response
+func (o *PostBanksDefault) WithStatusCode(code int) *PostBanksDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post banks default response
+func (o *PostBanksDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the post banks default response
+func (o *PostBanksDefault) WithPayload(payload *models.ErrorResponse) *PostBanksDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post banks default response
+func (o *PostBanksDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostBanksDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
