# restapi/operations/post_cards_responses.go
@@ -1,0 +1,118 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"card-project/models"
+)
+
+// PostCardsCreatedCode is the HTTP code returned for type PostCardsCreated
+const PostCardsCreatedCode int = 201
+
+/*
+PostCardsCreated Card created
+
+swagger:response postCardsCreated
+*/
+type PostCardsCreated struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Card `json:"body,omitempty"`
+}
+
+// NewPostCardsCreated creates PostCardsCreated with default headers values
+func NewPostCardsCreated() *PostCardsCreated {
+
+	return &PostCardsCreated{}
+}
+
+// WithPayload adds the payload to the post cards created response
+func (o *PostCardsCreated) WithPayload(payload *models.Card) *PostCardsCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post cards created response
+func (o *PostCardsCreated) SetPayload(payload *models.Card) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostCardsCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(201)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*
+PostCardsDefault Общая ошибка
+
+swagger:response postCardsDefault
+*/
+type PostCardsDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewPostCardsDefault creates PostCardsDefault with default headers values
+func NewPostCardsDefault(code int) *PostCardsDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostCardsDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post cards default response
+func (o *PostCardsDefault) WithStatusCode(code int) *PostCardsDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post cards default response
+func (o *PostCardsDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the post cards default response
+func (o *PostCardsDefault) WithPayload(payload *models.ErrorResponse) *PostCardsDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post cards default response
+func (o *PostCardsDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostCardsDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
