# swagger.yaml
@@ -40,6 +40,24 @@ paths:
           description: Общая ошибка
           schema:
             $ref: "#/definitions/ErrorResponse"
+    patch:
+      summary: "Patch user"
+      parameters:
+        - in: body
+          name: user
+          description: "User patched"
+          required: true
+          schema:
+            $ref: "#/definitions/User"
+      responses:
+        201:
+          description: "User patched"
+          schema:
+            $ref: "#/definitions/User"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /users/{id}:
     get:
       summary: "Get a user by ID"
@@ -73,6 +91,172 @@ paths:
           description: Общая ошибка
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /cards:
+    get:
+      summary: "Get list of cards"
+      responses:
+        200:
+          description: "Ok"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Card"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      summary: "Create a new card"
+      parameters:
+        - in: body
+          name: card
+          description: "Card to be created"
+          required: true
+          schema:
+            $ref: "#/definitions/NewCard"
+      responses:
+        201:
+          description: "Card created"
+          schema:
+            $ref: "#/definitions/Card"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    patch:
+      summary: "Patch card"
+      parameters:
+        - in: body
+          name: card
+          description: "Card to be patched"
+          required: true
+          schema:
+            $ref: "#/definitions/Card"
+      responses:
+        201:
+          description: "Card patched"
+          schema:
+            $ref: "#/definitions/Card"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /cards/{id}:
+    get:
+      summary: "Get a card by ID"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Ok"
+          schema:
+            $ref: "#/definitions/Card"
+        404:
+          description: "Card not found"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      summary: "Delete a card by ID"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        204:
+          description: "Card deleted"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /banks:
+    get:
+      summary: "Get list of banks"
+      responses:
+        200:
+          description: "Ok"
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Bank"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      summary: "Create a new bank"
+      parameters:
+        - in: body
+          name: bank
+          description: "Bank to be created"
+          required: true
+          schema:
+            $ref: "#/definitions/NewBank"
+      responses:
+        201:
+          description: "Bank created"
+          schema:
+            $ref: "#/definitions/Bank"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    patch:
+      summary: "Patch bank"
+      parameters:
+        - in: body
+          name: bank
+          description: "Bank patched"
+          required: true
+          schema:
+            $ref: "#/definitions/Bank"
+      responses:
+        201:
+          description: "Bank patched"
+          schema:
+            $ref: "#/definitions/Bank"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /banks/{id}:
+    get:
+      summary: "Get a bank by ID"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        200:
+          description: "Ok"
+          schema:
+            $ref: "#/definitions/Bank"
+        404:
+          description: "Bank not found"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      summary: "Delete a bank by ID"
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        204:
+          description: "Bank deleted"
+        default:
+          description: Общая ошибка
+          schema:
+            $ref: "#/definitions/ErrorResponse"
 definitions:
   User:
     type: object
@@ -90,6 +274,44 @@ definitions:
         type: string
       lastName:
         type: string
+  Bank:
+    type: object
+    properties:
+      id:
+        type: string
+      Name:
+        type: string
+  NewBank:
+    type: object
+    properties:
+      Name:
+        type: string
+  Card:
+    type: object
+    properties:
+      id:
+        type: string
+      UserID:
+        type: string
+      BankID:
+        type: string
+      Number:
+        type: string
+      CreateDate:
+        type: string
+        format: date-time
+  NewCard:
+    type: object
+    properties:
+      UserID:
+        type: string
+      BankID:
+        type: string
+      Number:
+        type: string
+      CreateDate:
+        type: string
+        format: date-time
   ErrorResponse:
     title: ErrorResponse
     description: Общая ошибка
